--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -13,7 +13,7 @@ default = ["tls-native-roots", "rand"]
 onchain_bdk = ["bdk_wallet", "bark-bitcoin-ext/bdk"]
 tls-native-roots = ["tonic/tls-native-roots"]
 tls-webpki-roots = ["tonic/tls-webpki-roots"]
-rand = ["bitcoin/rand", "bip39/rand"]
+rand = ["dep:rand", "bitcoin/rand", "bip39/rand"]
 
 [lib]
 name = "bark"
@@ -39,7 +39,6 @@ serde.workspace = true
 tokio-util.workspace = true
 
 # INTERNAL
-rand.workspace = true
 rusqlite =  "0.31.0"
 
 lazy_static.workspace = true
@@ -62,5 +61,9 @@ futures.workspace = true
 # Prebuilt BDK Wallet only
 bdk_wallet = { workspace = true, features = [ "rusqlite" ], optional = true }
 
+# For some doctests
+rand = { workspace = true, optional = true }
+
 [dev-dependencies]
 ark-lib = { path = "../lib", features = [ "test-util" ] }
+rand = { workspace = true, optional = false }
