--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -16,7 +16,8 @@ test-util = [ "serde_json" ]
 [dependencies]
 
 # * EXPORTED DEPS
-bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
+rand = "0.9.2"
+bitcoin = { version = "0.32", features = [ "serde" ] }
 bark-bitcoin-ext = { version = "0.1.0-beta.4", path = "../bitcoin-ext", default-features = false }
 serde = "1.0.219"
 chrono = "0.4"
@@ -39,6 +40,6 @@ version = "0.32.0-beta.2"
 features = [ "serde" ]
 
 [dev-dependencies]
-rand = { version = "0.9.0", features = [ "small_rng" ] }
+bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
 serde_json = { workspace = true }
 bitcoinkernel = "0.0.24"
