--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -9,13 +9,16 @@ description = "Primitives for the Ark protocol and bark implementation"
 
 [lib]
 name = "ark"
+crate-type = ["cdylib", "rlib"]
 
 [features]
 test-util = [ "serde_json" ]
+wasm-js = [ "getrandom/wasm_js" ]
 
 [dependencies]
 
 # * EXPORTED DEPS
+getrandom = "0.3.0" # to enable WASM
 rand = "0.9.2"
 bitcoin = { version = "0.32", features = [ "serde" ] }
 bark-bitcoin-ext = { version = "0.1.0-beta.4", path = "../bitcoin-ext", default-features = false }
