bark-rest: generate clients

--- a/clients/rust/Cargo.toml
+++ b/clients/rust/Cargo.toml
@@ -14,3 +14,4 @@ serde_repr = "^0.1"
 url = "^2.5"
 reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
 bark-json = { version = "0.1.0-beta.4", path = "../../bark-json" }
+bark-rest = { version = "0.1.0-beta.4", path = "../../bark-rest" }
