--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-open-api.json text diff=json linguist-generated=true linguist-vendored=true -diff
-clients/rust/** linguist-generated=true linguist-vendored=true -diff
+bark-rest/openapi.json text diff=json linguist-generated=true
+clients/rust/** text diff=rust linguist-generated=true
