--- a/.woodpecker/nightly-release.yml
+++ b/.woodpecker/nightly-release.yml
@@ -40,11 +40,14 @@ steps:
       - cat VERSION
       - just build
       - just release-bark-linux
-      - cp ./target/x86_64-unknown-linux-gnu/release/bark      bark-linux-x86_64
-      - cp ./target/aarch64-unknown-linux-gnu/release/bark     bark-linux-aarch64
-      - cp ./target/armv7-unknown-linux-gnueabihf/release/bark bark-linux-armv7
+      - cp ./target/x86_64-unknown-linux-gnu/release/bark       bark-linux-x86_64
+      - cp ./target/x86_64-unknown-linux-gnu/release/barkd      barkd-linux-x86_64
+      - cp ./target/aarch64-unknown-linux-gnu/release/bark      bark-linux-aarch64
+      - cp ./target/aarch64-unknown-linux-gnu/release/barkd     barkd-linux-aarch64
+      - cp ./target/armv7-unknown-linux-gnueabihf/release/bark  bark-linux-armv7
+      - cp ./target/armv7-unknown-linux-gnueabihf/release/barkd barkd-linux-armv7
       - just release-server
-      - cp ./target/x86_64-unknown-linux-gnu/release/captaind  captaind-linux-x86_64
+      - cp ./target/x86_64-unknown-linux-gnu/release/captaind   captaind-linux-x86_64
 
   - name: build-and-push-to-docker
     when:
