server: Implement unified mailbox delivery.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -48,6 +48,7 @@ chrono.workspace = true
 clap.workspace = true
 futures.workspace = true
 async-trait.workspace = true
+async-stream.workspace = true
 pin-project.workspace = true
 serde_json.workspace = true
 rmp-serde.workspace = true
