--- a/server/captaind.default.toml
+++ b/server/captaind.default.toml
@@ -117,6 +117,9 @@ max_user_invoice_cltv_delta = 250
 # Timeout on the HTLC subscription RPC call
 htlc_subscription_timeout = "10m"
 
+# The duration after which a generated invoice will expire.
+invoice_expiry = "48h"
+
 # Indicates whether the Ark server requires clients to either
 # provide a VTXO ownership proof, or a lightning receive token
 # when preparing a lightning claim.
