--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -20,6 +20,7 @@ bark-bitcoin-ext = { version = "0.1.0-beta.4", path = "../bitcoin-ext", default-
 serde_json.workspace = true
 
 # EXPORTED
+anyhow.workspace = true
 bitcoin.workspace = true
 serde.workspace = true
 humantime.workspace = true
