--- a/server/captaind.default.toml
+++ b/server/captaind.default.toml
@@ -75,6 +75,9 @@ round_sign_time = "2s"
 # This effectively caps the maximum number of leaf VTXOs in a round.
 nb_round_nonces = 64
 
+# The duration after which to drop forfeit nonces
+round_forfeit_nonces_timeout = "30s"
+
 # The feerate we set for round funding transactions
 round_tx_feerate = "2500sat/kwu"
 
