ci: Fix typo in watchmand filename.

--- a/.woodpecker/images/releases/captaind/Dockerfile
+++ b/.woodpecker/images/releases/captaind/Dockerfile
@@ -22,7 +22,7 @@ RUN apt-get update && \
 
 RUN mkdir -p /root/captaind/
 COPY ./captaind-linux-x86_64                              /usr/local/bin/captaind
-COPY ./watchmand-linux-x86-64                             /usr/local/bin/watchmand
+COPY ./watchmand-linux-x86_64                             /usr/local/bin/watchmand
 COPY ./.woodpecker/images/releases/captaind/start.sh      /root/captaind/start.sh
 COPY ./.woodpecker/images/releases/captaind/captaind.toml /root/captaind/captaind.toml
 
