--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -42,6 +42,7 @@ uuid = { version = "1.17.0", features = ["v4"] }
 ipnet = "2.11.0"
 trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }
 smallvec = "1.13"
+indexmap = "2.12.1"
 
 lazy_static.workspace = true
 env_logger.workspace = true
