server: Add VtxoAlreadyInFluxError + some small related refactors
Also try to not use the term "flux" in user-facing messaging.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -32,6 +32,7 @@ serde.workspace = true
 log.workspace = true
 
 # INTERNAL
+thiserror.workspace = true
 tokio-postgres.workspace = true
 bb8.workspace = true
 bb8-postgres.workspace = true
