--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,10 +77,14 @@ bdk_core = { version = "0.6.1", default-features = false }
 bdk_esplora = { version = "0.22.1", features = [ "std", "async-https-rustls", "tokio" ], default-features = false }
 bdk_bitcoind_rpc = { version = "0.22.0" }
 # tracing and monitoring
-opentelemetry = "0.31.0"
-opentelemetry_sdk = { version = "0.31.0", features = [ "trace", "rt-tokio" ] }
-opentelemetry-otlp = { version = "0.31.0", features = [ "trace", "grpc-tonic", "gzip-tonic" ] }
-opentelemetry-semantic-conventions = { version = "0.31.0", features = [ "semconv_experimental" ] }
-tracing = { version = "0.1.41", features = [ "std", "attributes" ] }
-tracing-opentelemetry = "0.32.0"
-tracing-subscriber = { version = "0.3.19", features = [ "std", "registry", "ansi", "fmt", "env-filter" ] }
+opentelemetry = "0.30.0"
+opentelemetry_sdk = { version = "0.30.0", features = [ "trace", "rt-tokio" ] }
+opentelemetry-otlp = { version = "0.30.0", features = [ "trace", "grpc-tonic", "gzip-tonic" ] }
+opentelemetry-semantic-conventions = { version = "0.30.0", features = [ "semconv_experimental" ] }
+tonic-tracing-opentelemetry = "0.30.0"
+json-subscriber = { version = "0.2.6", features = [ "tracing-opentelemetry-0-31", "opentelemetry-0-30" ] }
+tracing = { version = "0.1.43", features = [ "std", "attributes" ] }
+tracing-core = { version = "0.1.35" }
+tracing-opentelemetry = "0.31.0"
+tracing-subscriber = { version = "0.3.22", features = [ "std", "registry", "ansi", "fmt", "json", "env-filter" ] }
+tracing-attributes = "0.1.31"
