--- a/server-log/Cargo.toml
+++ b/server-log/Cargo.toml
@@ -15,7 +15,6 @@ name = "server_log"
 ark-lib = { path = "../lib" }
 bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }
 
-log.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
@@ -27,3 +26,6 @@ bitcoin.workspace = true
 tracing.workspace = true
 opentelemetry.workspace = true
 tracing-opentelemetry.workspace = true
+tracing-subscriber.workspace = true
+tracing-core.workspace = true
+tracing-attributes.workspace = true
