--- a/bark-rest/Cargo.toml
+++ b/bark-rest/Cargo.toml
@@ -14,6 +14,7 @@ chrono.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
+tokio-util.workspace = true
 tracing.workspace = true
 tower.workspace = true
 log.workspace = true
