--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -26,6 +26,7 @@ serde = "1.0.219"
 chrono = "0.4"
 
 # * INTERNAL DEPS
+async-trait.workspace = true
 lazy_static.workspace = true
 thiserror.workspace = true
 lightning-invoice.workspace = true
