--- a/.woodpecker/images/releases/captaind/captaind.toml
+++ b/.woodpecker/images/releases/captaind/captaind.toml
@@ -22,7 +22,7 @@ priority = 1
 server_cert_path = "/data/cln/regtest/ca.pem"
 client_cert_path = "/data/cln/regtest/client.pem"
 client_key_path = "/data/cln/regtest/client-key.pem"
-hodl_invoice.uri = "https://cln:9988"
-hodl_invoice.server_cert_path = "/data/cln/regtest/hold/ca.pem"
-hodl_invoice.client_cert_path = "/data/cln/regtest/hold/client.pem"
-hodl_invoice.client_key_path = "/data/cln/regtest/hold/client-key.pem"
+hold_invoice.uri = "https://cln:9988"
+hold_invoice.server_cert_path = "/data/cln/regtest/hold/ca.pem"
+hold_invoice.client_cert_path = "/data/cln/regtest/hold/client.pem"
+hold_invoice.client_key_path = "/data/cln/regtest/hold/client-key.pem"
