--- a/bark-rest/Cargo.toml
+++ b/bark-rest/Cargo.toml
@@ -18,6 +18,7 @@ tokio-util.workspace = true
 tracing.workspace = true
 tower.workspace = true
 log.workspace = true
+parking_lot.workspace = true
 
 axum = { version = "0.8.4", features = ["macros", "tokio", "http2", "query", "json"], default-features = false }
 tower-http = { version = "0.5", features = ["cors", "trace"] }
