Don't use tonic's export of async-trait
- use the macro directly in our crates
- in tests instead of having extern crate for the crate, using the full path

--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -43,6 +43,7 @@ rand.workspace = true
 rusqlite = { version = "0.31.0", features = ["chrono"] }
 
 lazy_static.workspace = true
+async-trait.workspace = true
 chrono.workspace = true
 serde_json.workspace = true
 rmp-serde.workspace = true
