--- a/server/watchmand.default.toml
+++ b/server/watchmand.default.toml
@@ -47,6 +47,21 @@ wake_interval = "1m"
 
 
 #################
+# FEE ESTIMATOR #
+#################
+
+[fee_estimator]
+# Interval to update fee estimates from bitcoind
+update_interval = "1m"
+# Fallback feerate for fast confirmation (1 block target)
+fallback_fee_rate_fast = "25sat/vb"
+# Fallback feerate for regular confirmation (3 block target)
+fallback_fee_rate_regular = "10sat/vb"
+# Fallback feerate for slow confirmation (6 block target)
+fallback_fee_rate_slow = "4sat/vb"
+
+
+#################
 # POSTGRESQL DB #
 #################
 
