--- a/.woodpecker/helpers.yml
+++ b/.woodpecker/helpers.yml
@@ -66,7 +66,7 @@ steps:
     commands:
       - sudo chown -R nixuser:nixbld /woodpecker
       - nix develop .#default --command bash -c "just rustdocs"
-      - sudo cp -r rustdocs /host/data/
+      - sudo cp -r rustdocs/doc/ /host/data/doc/
       - bash contrib/generate-index.sh /host/data/rustdocs/doc
       - echo "rustdocs -> https://rustdocs.2nd.dev/master/"
 
