--- a/bark-rest-client/Cargo.toml
+++ b/bark-rest-client/Cargo.toml
@@ -17,6 +17,6 @@ bark-json = { version = "0.1.0-beta.6", path = "../bark-json" }
 bark-rest = { version = "0.1.0-beta.6", path = "../bark-rest" }
 
 [features]
-default = ["native-tls"]
+default = ["rustls-tls"]
 native-tls = ["reqwest/native-tls"]
 rustls-tls = ["reqwest/rustls-tls"]
