--- a/server/captaind.default.toml
+++ b/server/captaind.default.toml
@@ -96,12 +96,6 @@ round_forfeit_nonces_timeout = "30s"
 # The feerate we set for offboard transactions
 offboard_feerate = "7sat/vb"
 
-# The number of bytes we charge fixed for each offboard
-#
-# This is multiplied with the offboard feerate.
-# A single 2-in-2-out taproot keyspend tx is 846 or 212 vb.
-offboard_fixed_fee_vb = 212
-
 # The time after which we drop offboard sessions and release locked VTXOs
 offboard_session_timeout = "30s"
 
@@ -190,6 +184,11 @@ ppm = 1000 # 0.1%
 # Offboard fees with expiry-based PPM
 [fees.offboard]
 base_fee_sat = 200
+# The number of bytes we charge fixed for each offboard
+#
+# This is multiplied with the offboard feerate.
+# A single 2-in-2-out taproot keyspend tx is 846 or 212 vb.
+fixed_additional_vb = 212
 ppm_expiry_table = [
     { expiry_blocks_threshold = 0, ppm = 0 },       # exp <= 96: 0 ppm
     { expiry_blocks_threshold = 97, ppm = 1000 },   # 96 < exp <= 198: 1,000 ppm (0.1%)
