Re-license all crates under the MIT license
Previous versions of the code remain available under the CC-0 terms, i.e.
without the attribution requirement.

--- a/bark-cli/Cargo.toml
+++ b/bark-cli/Cargo.toml
@@ -2,7 +2,7 @@
 name = "bark-cli"
 version = "0.1.0-beta.7"
 edition = "2024"
-license = "CC0-1.0"
+license = "MIT"
 description = "CLI for the bitcoin Ark protocol built by Second"
 authors = [ "Team Second <hello@second.tech>" ]
 
