--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bark-wallet"
 version = "0.1.0-beta.7"
-license = "CC0-1.0"
+license = "MIT"
 authors = [ "Team Second <hello@second.tech>" ]
 repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "Wallet library and CLI for the bitcoin Ark protocol built by Second"
