--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bark-json"
 version = "0.1.0-beta.7" # lock to bark-wallet version
-license = "CC0-1.0"
+license = "MIT"
 authors = [ "Team Second <hello@second.tech>" ]
 description = "JSON definitions for the bark APIs"
 edition = "2024"
