--- a/bark-rest/Cargo.toml
+++ b/bark-rest/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0-beta.7"
 edition = "2024"
 authors = ["Second Team <hello@second.tech>"]
 repository = "https://gitlab.com/ark-bitcoin/bark"
-license = "CC0-1.0"
+license = "MIT"
 description = "a REST server built on top of the bark-wallet crate"
 
 [dependencies]
