--- a/bitcoin-ext/Cargo.toml
+++ b/bitcoin-ext/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bark-bitcoin-ext"
 version = "0.1.0-beta.7"
-license = "CC0-1.0"
+license = "MIT"
 authors = [ "Team Second <hello@second.tech>" ]
 repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "Extension library to the rust-bitcoin ecosystem crates used in bark"
