--- a/cln-rpc/Cargo.toml
+++ b/cln-rpc/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bark-cln-rpc"
 version = "0.3.0+cln.25.09-hold.0.3.2.patched"
-license = "CC0-1.0"
+license = "MIT"
 authors = [ "Team Second <hello@second.tech>" ]
 repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "Generated gRPC code for c-lightning used in bark"
