--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ark-lib"
 version = "0.1.0-beta.7"
-license = "CC0-1.0"
+license = "MIT"
 authors = [ "Team Second <hello@second.tech>" ]
 edition = "2021"
 repository = "https://gitlab.com/ark-bitcoin/bark"
