--- a/server-log/Cargo.toml
+++ b/server-log/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bark-server-log"
 version = "0.1.0-beta.7" # lock to bark-server version
-license = "CC0-1.0"
+license = "MIT"
 authors = [ "Team Second <hello@second.tech>" ]
 repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "structured log message definitions for bark-server"
