--- a/server-rpc/Cargo.toml
+++ b/server-rpc/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bark-server-rpc"
 version = "0.1.0-beta.7"
-license = "CC0-1.0"
+license = "MIT"
 authors = [ "Team Second <hello@second.tech>" ]
 repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "gRPC code for bark-server API"
