--- a/.woodpecker/tests-codecov.yml
+++ b/.woodpecker/tests-codecov.yml
@@ -62,7 +62,8 @@ steps:
     image: registry.2nd.dev/build:25
     volumes:
       - /data:/host/data
-      - tmpfs:/dev/shm:rw
+    tmpfs:
+      - /dev/shm:size=10g
     environment:
       TEST_DIRECTORY: ./test/btc29-codecov
       RUST_TEST_THREADS: 1
