docs: expand documentation skill with style guide and vocabulary
Add bark-rest CLAUDE.md with OpenAPI annotation conventions and extend
the documentation skill with new vocabulary entries and a style guide.

bark-rest: improve OpenAPI summaries and descriptions

Add summaries to all endpoints, rewrite descriptions to be
self-contained and accurate, and expand the top-level API description.

docs: add OpenAPI spec regeneration rule to bark-rest CLAUDE.md

bark-rest: address review comments on OpenAPI descriptions

Replace hardcoded "roughly every 60 seconds" with a reference to
SLOW_INTERVAL in exit start descriptions. Simplify pending boards
description. Update CLAUDE.md to use `just generate-bark-rest-client`
instead of raw cargo command, and add direnv .envrc for automatic nix
shell loading.

bark-rest: improve OpenAPI tag descriptions

The previous descriptions were generic placeholders like "Wallet-related
endpoints" and "Lightning-related endpoints" that told developers nothing
beyond the tag name itself. Several tags overlap in scope (wallet, onchain,
and lightning all deal with payments), so the descriptions need to help
developers understand which group of endpoints to reach for.

The new descriptions clarify what each tag covers and how they relate:
the wallet tag is the primary interface for Ark balances and multi-protocol
payments, onchain is barkd's built-in on-chain wallet, lightning is for
Lightning-only invoice and payment operations, and so on.

bark-rest: add schema and property descriptions for OpenAPI docs

Several key schemas (Balance, VtxoInfo, WalletVtxoInfo, VtxoStateInfo)
and their properties had no descriptions, making it harder for
developers to navigate the OpenAPI documentation. Added doc comments
to these structs and fields so that the generated API docs explain
Ark-specific concepts like VTXOs, chain anchors, exit depth, and
balance states.

--- a/bark-rest-client/Cargo.toml
+++ b/bark-rest-client/Cargo.toml
@@ -2,7 +2,7 @@
 name = "bark-rest-client"
 version = "0.1.0-beta.7"
 authors = ["hello@second.tech"]
-description = "A simple REST API for Barkd"
+description = "A simple REST API for barkd, a wallet daemon for integrating bitcoin payments into your app over HTTP. Supports self-custodial Lightning, Ark, and on-chain out of the box.  barkd is a long-running daemon best suited for always-on or high-connectivity environments like nodes, servers, desktops, and point-of-sale terminals.  The API is organized into the following groups:  - **Wallet:** The bread and butter for most applications. Manage Ark addresses, balances, VTXOs, and refreshes. Send payments via Ark, Lightning, and on-chain, all funded from your Ark balance. Start here. - **Lightning:** Create BOLT11 invoices to receive payments over Lightning and track receive status. Any application that accepts Lightning payments will use these endpoints alongside the wallet endpoints. - **On-chain:** Manage barkd's built-in on-chain bitcoin wallet. This wallet holds funds in standard UTXOs, separate from your Ark balance, and operates under the normal on-chain trust model without involving the Ark server. - **Boards:** Move on-chain bitcoin onto the Ark protocol to start making off-chain payments. - **Exits:** Unilaterally move bitcoin back on-chain without server cooperation, for when the Ark server is unavailable or uncooperative. - **Bitcoin:** Query bitcoin network data such as the current block height.  All endpoints return JSON. Amounts are denominated in satoshis."
 license = "MIT"
 edition = "2021"
 
