--- a/bark-rest-client/Cargo.toml
+++ b/bark-rest-client/Cargo.toml
@@ -12,11 +12,6 @@ serde_with = { version = "^3.8", default-features = false, features = ["base64",
 serde_json = "^1.0"
 serde_repr = "^0.1"
 url = "^2.5"
-reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "query", "form"] }
+reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
 bark-json = { version = "0.1.0-beta.7", path = "../bark-json" }
 bark-rest = { version = "0.1.0-beta.7", path = "../bark-rest" }
-
-[features]
-default = ["native-tls"]
-native-tls = ["reqwest/native-tls"]
-rustls = ["reqwest/rustls"]
