--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ prost = "0.14.1"
 prost-types = "0.14.1"
 tonic-prost = "0.14.2"
 tonic-prost-build = "0.14.2"
+tonic-health = "0.14.0"
 tokio = { version = "1.35", features = [ "rt-multi-thread", "fs", "signal" ] }
 tokio-util = { version = "0.7.14" }
 tokio-stream = { version = "0.1.14", features = [ "sync" ] }
